# Agent_community

./: .env.example  .gitignore  Dockerfile  README.md  TODO.md  analyze_research_results.py  dashboard.html  design.md  docker-compose.yml  export_results.py  pyproject.toml  requirements.txt  run_experiment.py
.claude/: settings.local.json
aces/: __init__.py  attacks.py  cli.py  config.py  database.py  defenses.py  engine.py  experiment.py  metrics.py  models.py  moltbook.py  network.py  openclaw_runtime.py  playbooks.py  prompting.py  runtime.py  services.py  webhost.py
config/: attacks.yaml  community_research_attacks.yaml  community_research_enterprise.yaml  community_research_experiment.yaml  enterprise.yaml  experiment.yaml
docker/: generate_agent_configs.py  moltbook.Dockerfile
docs/: configuration.md  extending.md  quickstart.md  research_scenarios.md
scripts/: run_framework_justification.py  run_real_experiment.py  smoke_glm_track_d.py
tests/: stub_runtime.py  test_async_engine.py  test_community_research_design.py  test_openclaw_runtime.py  test_research_phase2.py  test_research_phase3.py  test_research_regressions.py  test_services.py  test_smoke.py  test_validity_fixes.py
update/agent_community_research_design/: Agent_Community_Research_Design.md
update/agent_community_research_design/config/: community_research_attacks.yaml  community_research_enterprise.yaml  community_research_experiment.yaml
update/agent_community_research_design/tests/: test_community_research_design.py
