[project]
name = "aces"
version = "0.1.0"
description = "Agent Community Enterprise Simulator — a configurable framework for studying security dynamics in long-lived multi-agent communities"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = ["httpx>=0.27"]
analysis = ["numpy>=1.26", "scipy>=1.12"]
all = ["httpx>=0.27", "numpy>=1.26", "scipy>=1.12"]

[project.scripts]
aces = "aces.cli:main"
